Agregado el comentario

--- a/practone.html
+++ b/practone.html
@@ -120,7 +120,7 @@
         console.log(colores[pos]); */
         
         //Objetos
-        const persona={
+ /*        const persona={
             nombre: "Diovilgy",
             apellido: "Salazar",
             edad: 25,
@@ -143,7 +143,10 @@
         console.log(persona.contacto);
         persona.saludar();
         console.log(Object.values(persona));
-        console.log(Object.keys(persona));
+        console.log(Object.keys(persona)); */
+
+        //Condicionales 
+
     </script>
 </body>
 </html>
