Atributos del objeto

--- a/practone.html
+++ b/practone.html
@@ -149,7 +149,8 @@
 
         //Objetos
         const personal={
-            nombre: "Diovilgy"
+            nombre: "Diovilgy",
+            apellido: "salazar"
         }
 
     </script>
