Atributos del objeto personal

--- a/practone.html
+++ b/practone.html
@@ -150,7 +150,8 @@
         //Objetos
         const personal={
             nombre: "Diovilgy",
-            apellido: "salazar"
+            apellido: "Salazar",
+            direccion: "11 de abril"
         }
 
     </script>
