Atributos del objeto personal

--- a/practone.html
+++ b/practone.html
@@ -151,7 +151,9 @@
         const personal={
             nombre: "Diovilgy",
             apellido: "Salazar",
-            direccion: "11 de abril"
+            direccion: "11 de abril",
+            edad: 25,
+            peso: 50
         }
 
     </script>
