Agregando los atributos

--- a/practone.html
+++ b/practone.html
@@ -153,7 +153,8 @@
             apellido: "Salazar",
             direccion: "11 de abril",
             edad: 25,
-            peso: 50
+            peso: 50,
+            altura: 1.60
         }
 
     </script>
