Agregando los atributos

--- a/practone.html
+++ b/practone.html
@@ -154,7 +154,8 @@
             direccion: "11 de abril",
             edad: 25,
             peso: 50,
-            altura: 1.60
+            altura: 1.60,
+            estudios: "universidad"
         }
 
     </script>
