--- a/JavaScript-Curso/Modulo1.html
+++ b/JavaScript-Curso/Modulo1.html
@@ -7,7 +7,7 @@
     <title>Modulo Uno aprendiendo JavaScript</title>
 </head>
 <body>
-    <h1>Modulo Uno-curso JavaScript</h1>
+    <h1>Modulo Uno-curso</h1>
     <h3>Variables, Constanes, Strings, Numeros, Bolleans, Undefined, Null y NaN</h3>
 
     <script>
