--- a/JavaScript-Curso/Modulo2.html
+++ b/JavaScript-Curso/Modulo2.html
@@ -9,7 +9,13 @@
 <body>
     <script>
         /* Funciones */
-        
+        /* Función Declarada */
+        function esUnaFuncion(){
+            console.log("Uno");
+            console.log("Dos");
+        }
+        /* Invocación de la función */
+        esUnaFuncion();
     </script>
 </body>
 </html>
