Modificacion en comentarios

--- a/JavaScript-Curso/Modulo1.html
+++ b/JavaScript-Curso/Modulo1.html
@@ -78,7 +78,7 @@
         /* Null: se le asigna intencional mente el valor null*/
         let nulo=null;
         console.log(nulo);
-        /* NaN - Not a Number */
+        /* NaN - Not a Number - No es un número */
         let noEsUnNumero= "hola" * 4.5;
         console.log(noEsUnNumero);
     </script>
