--- a/JavaScript-Curso/Modulo2.html
+++ b/JavaScript-Curso/Modulo2.html
@@ -16,6 +16,8 @@
         }
         /* Invocación de la función */
         esUnaFuncion();
+
+        /* Funcion que retorna un valor */
     </script>
 </body>
 </html>
